# dave2

./: README.md  main.spec  pyproject.toml  requirements.txt
src/: client.py  gui.py  main.py  server.py
src/core/: client.py  server.py
src/gui/: bubble.py  consent.py  window.py
